...
            self.proceedToNextQuestionOrResults()
        }
    }
}

private extension String {
    static let roundFinishedTitle = "Этот раунд окончен!"
    static let playAgain = "Сыграть ещё раз"
}

